fix portrait text wrapping

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -153,7 +153,6 @@ $skillcheck-color: #989898;
 
 .portrait {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
   align-items: start;
 }
